# basic-neural-network

./: .gitignore  pyproject.toml
basic_neural_network/: main.py
